# vicare-openssl

./: .gitignore  ANNOUNCE  Makefile.am  README  TODO.org  configure.ac  configure.sh
demos/: Makefile.am  vicare-openssl.in  vicare-openssl.sps
doc/: Makefile.am  vicare-openssl.texi
lib/: Makefile.am  compile-all.sps  compile-nausicaa.sps  dependencies.make  features.c  libraries.scm
lib/vicare/crypto/: openssl.sls  openssl.vicare.sls
lib/vicare/crypto/openssl/: aes.sls  aes.vicare.sls  buffers.sls  buffers.vicare.sls  cond-expand.sls  constants.sls.in  constants.vicare.sls.in  helpers.vicare.sls  hmac.sls  hmac.vicare.sls  message-digests.sls  message-digests.vicare.sls  unsafe-capi.sls  unsafe-capi.vicare.sls
lib/vicare/crypto/openssl/aes/: cond-expand.sls
lib/vicare/crypto/openssl/buffers/: cond-expand.sls
lib/vicare/crypto/openssl/evp/: ciphers.sls  ciphers.vicare.sls  message-digests.sls  message-digests.vicare.sls
lib/vicare/crypto/openssl/evp/ciphers/: cond-expand.sls
lib/vicare/crypto/openssl/evp/message-digests/: cond-expand.sls
lib/vicare/crypto/openssl/hmac/: cond-expand.sls
lib/vicare/crypto/openssl/message-digests/: cond-expand.sls
src/: Makefile.am  vicare-openssl-buffer.c  vicare-openssl-core.c  vicare-openssl-crypto-aes.c  vicare-openssl-evp-cipher.c  vicare-openssl-evp-hash.c  vicare-openssl-evp-md.c  vicare-openssl-evp-message-digest.c  vicare-openssl-hash-checksums.c  vicare-openssl-helpers.c  vicare-openssl-hmac.c  vicare-openssl-internals.h  vicare-openssl-raw-crypto-aes.c  vicare-openssl-raw-hmac.c  vicare-openssl-raw-message-digest.c  vicare-openssl-version.c
tests/: Makefile.am  demo-for-documentation.sps  test-vicare-buffers.sps  test-vicare-crypto-aes.sps  test-vicare-evp-cipher.sps  test-vicare-evp-hash.sps  test-vicare-evp-md.sps  test-vicare-evp-message-digest.sps  test-vicare-hash-checksums.sps  test-vicare-hmac.sps  test-vicare-openssl-core.sps  test-vicare-openssl-version.sps  test-vicare-openssl.sps  test-vicare-raw-crypto-aes.sps  test-vicare-raw-hmac.sps  test-vicare-raw-message-digest.sps
