## Process this file with automake to produce Makefile.in

TESTS			= \
	test-vicare-openssl-version.sps			\
	test-vicare-raw-message-digest.sps		\
	test-vicare-hmac.sps				\
	\
	test-vicare-crypto-aes.sps			\
	\
	test-vicare-evp-message-digest.sps

EXTRA_DIST = \
	test-vicare-openssl-version.sps			\
	test-vicare-raw-message-digest.sps		\
	test-vicare-hmac.sps				\
	\
	test-vicare-crypto-aes.sps			\
	\
	test-vicare-evp-message-digest.sps		\
	\
	demo-for-documentation.sps

include $(top_srcdir)/meta/makefiles/tests.am

### end of file
