## Process this file with automake to produce Makefile.in

TESTS			= \
	test-vicare-openssl-core.sps			\
	test-vicare-raw-message-digest.sps		\
	test-vicare-raw-hmac.sps			\
	test-vicare-raw-crypto-aes.sps			\
	test-vicare-evp-message-digest.sps		\
	test-vicare-evp-cipher.sps			\
	test-vicare-buffers.sps

EXTRA_DIST = \
	test-vicare-openssl-core.sps			\
	test-vicare-raw-message-digest.sps		\
	test-vicare-raw-hmac.sps			\
	test-vicare-raw-crypto-aes.sps			\
	test-vicare-evp-message-digest.sps		\
	test-vicare-evp-cipher.sps			\
	test-vicare-buffers.sps				\
	demo-for-documentation.sps

include $(top_srcdir)/meta/makefiles/tests.am

### end of file
